--- a/Contacto.html
+++ b/Contacto.html
@@ -8,6 +8,35 @@
 </head>
 
 <body>lw
+    <form method="post" action="resultado.html" class="formRegis">
+        <h3>Información personal</h3>
+    <fieldset>
+    
+           <!--input para nombre-->
+ <div class="Nom">
+   <label for="nombre">Nombre</label>
+   <input class="entrada" type="text" name="nom" id="nombre">
+  </div>
+
+<!--input para correo-->
+  
+<div class="Cor">
+    <label for="correo">Correo</label>
+    <input class="entrada" type="email" name="cor" id="correo">
+   </div>
+
+   
+   <label for="telefono">Telefono</label>
+   <input type="number" name=" telefono" id="telefono">
+
+
+<!--mensaje-->
+
+  <div>
+    <label for="mensaje">Mensaje</label>
+    <br>
+    <textarea class="entrada" name="mensaje" id="mensaje" cols="30" rows="10"></textarea>
+  </div>
     
 <!--Form para entregar-->   
     <div class="registro">
