en esta version logramos introducir un carrusel de imagines con bootstrap

--- a/Contacto.html
+++ b/Contacto.html
@@ -7,7 +7,7 @@
 
 </head>
 
-<body>lw
+<body>
     <form method="post" action="resultado.html" class="formRegis">
         <h3>Información personal</h3>
     <fieldset>
